# starguard-core

./: .gitignore  ARCHITECTURE.md  PHASE3_COMPLETION_REPORT.md  README.md  pyproject.toml  verify_hedis_close_gate.py  verify_hedis_flags.py  verify_phase4_close_gate.py  verify_stars_close_gate.py  verify_stars_flags.py
.github/workflows/: ci.yml  publish.yml
docs/: D1_SPRINT_PYPI.md  PHASE4_ROADMAP.md
src/starguard_core/: __init__.py  command_center.py
src/starguard_core/auth/: __init__.py  tiers.py  validator.py
src/starguard_core/hcc/: __init__.py  calculator.py  gaps.py  models.py  revenue.py  scenarios.py
src/starguard_core/hedis/: __init__.py  interventions.py  measures.py  models.py  predictor.py  scenarios.py
src/starguard_core/radv/: __init__.py  financial.py  models.py  scenarios.py  scorer.py  stratifier.py
src/starguard_core/stars/: __init__.py  cutpoints.py  impact.py  models.py  scenarios.py  trajectory.py
tests/: test_auth.py  test_command_center.py  test_hcc.py  test_hedis.py  test_radv.py  test_stars.py
