[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starguard-core"
version = "0.1.0"
description = "Shared library for StarGuard Desktop, Mobile, and AuditShield — auth, HEDIS, audit trail"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
badge = ["shiny>=0.10", "htmltools"]

[tool.hatch.build.targets.wheel]
packages = ["src/starguard_core"]
