[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starguard-core"
version = "4.5.0"
description = "Shared library for StarGuard Desktop, Mobile, and AuditShield — auth, HEDIS, audit trail"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Robert Reichert", email = "reichert.starguardai@gmail.com" }]
keywords = ["hedis", "medicare", "star-ratings", "radv", "hcc", "healthcare-analytics"]
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/reichert-science-intelligence/starguard-core"
Repository = "https://github.com/reichert-science-intelligence/starguard-core"
Documentation = "https://github.com/reichert-science-intelligence/starguard-core#readme"
Changelog = "https://github.com/reichert-science-intelligence/starguard-core/blob/main/docs/changelog.md"

[project.optional-dependencies]
badge = ["shiny>=0.10", "htmltools"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/starguard_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/starguard_core"]
branch = true

[tool.coverage.report]
fail_under = 90
